Enhancement: Add support for CSRF protection in Barong

--- a/templates/config/barong.env.erb
+++ b/templates/config/barong.env.erb
@@ -32,12 +32,14 @@ BARONG_VAULT_ADDRESS=http://vault:8200
 
 BARONG_REDIS_URL=redis://redis:6379
 
-EVENT_API_JWT_PRIVATE_KEY=<%= @barong_private_key %>
-EVENT_API_JWT_ALGORITHM=RS256
+BARONG_EVENT_API_JWT_PRIVATE_KEY=<%= @barong_private_key %>
+BARONG_EVENT_API_JWT_ALGORITHM=RS256
 BARONG_EVENT_API_RABBITMQ_HOST=rabbitmq
 BARONG_EVENT_API_RABBITMQ_PORT=5672
 BARONG_EVENT_API_RABBITMQ_USERNAME=guest
 BARONG_EVENT_API_RABBITMQ_PASSWORD=guest
+
+BARONG_CSRF_PROTECTION=<%= @config['csrfEnabled'] %>
 
 BARONG_APP_NAME=<%= @config['app']['name'] %>
 BARONG_DOMAIN=<%= ssl_helper('http') %>://<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>
