--- a/templates/config/gateway/envoy.yaml.erb
+++ b/templates/config/gateway/envoy.yaml.erb
@@ -85,6 +85,7 @@ static_resources:
                     - exact: x-auth-apikey
                     - exact: x-auth-nonce
                     - exact: x-auth-signature
+                    - exact: x-csrf-token
                     - exact: user-agent
                     - exact: x-forwarded-host
                     - exact: x-forwarded-for
