Feature: Add ability to auto-create wallets for XLN currencies
* Update Peatio Management API config
* Enable CSRF protection by default
* Set peatio and barong log_level to debug by default

--- a/templates/config/barong/seeds.yml.erb
+++ b/templates/config/barong/seeds.yml.erb
@@ -5,7 +5,7 @@
 # model properties are listed at the very bottom of this models files.
 #
 # Note: email is the only required field here.
-<%- unless @config['wizard_enabled'] %>
+<%- unless @config['app']['wizard_enabled'] %>
 users:
 - email: admin@barong.io
   password: 0lDHd9ufs9t@
