--- a/templates/config/peatio/management_api_v1.yml.erb
+++ b/templates/config/peatio/management_api_v1.yml.erb
@@ -39,5 +39,15 @@ scopes:
       - sonic
     permitted_signers:
       - sonic
+  read_wallets:
+    mandatory_signers:
+      - sonic
+    permitted_signers:
+      - sonic
+  write_wallets:
+    mandatory_signers:
+      - sonic
+    permitted_signers:
+      - sonic
 
 jwt: {}
